--- a/views/admin/partials/vendor.ejs
+++ b/views/admin/partials/vendor.ejs
@@ -6,6 +6,6 @@
 <script src="/admin_assets/vendors/perfect-scrollbar/js/perfect-scrollbar.min.js"></script>
 <script src="/admin_assets/vendors/@coreui/coreui/js/coreui.min.js"></script>
 <!-- Plugins and scripts required by this view-->
-<script src="/admin_assets/vendors/chart.js/js/Chart.min.js"></script>
+<!-- <script src="/admin_assets/vendors/chart.js/js/Chart.min.js"></script> -->
 <script src="/admin_assets/vendors/@coreui/coreui-plugin-chartjs-custom-tooltips/js/custom-tooltips.min.js"></script>
-<script src="/admin_assets/js/main.js"></script>
+<!-- <script src="/admin_assets/js/main.js"></script> -->
