--- a/views/layouts/default.ejs
+++ b/views/layouts/default.ejs
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>
-        <%= locals.title || meta.title%>
+        <%= locals.post ? locals.post.title : locals.title || meta.title%>
     </title>
     <%- include(views+'partials/vendor.ejs') %>
-    <%- include(views+'partials/includes.ejs') %>
+        <%- include(views+'partials/includes.ejs') %>
 </head>
 
 <body>
     <%- include(views+'partials/header') %>
-    <%- include(views+locals.page) %>
+        <%- include(views+locals.page) %>
 </body>
 
 </html>
