--- a/views/admin/partials/includes.ejs
+++ b/views/admin/partials/includes.ejs
@@ -6,3 +6,4 @@
 <!-- Main styles for this application-->
 <link href="/admin_assets/css/style.css" rel="stylesheet">
 <link href="/admin_assets/vendors/pace-progress/css/pace.min.css" rel="stylesheet">
+<link href="/admin_assets/css/custom.css" rel="stylesheet">
