--- a/views/admin/gallery/index.ejs
+++ b/views/admin/gallery/index.ejs
@@ -24,14 +24,15 @@
 <div class="card">
     <div class="card-body">
         <h4>Images</h4>
-        <div class="row">
+        <div class="col-md-12">
+            <div class="row">
             <% if (locals.gallery) {
                 gallery.forEach(function (img) { %>
                     <div class="col-md-3 each_gallery_img">
                         <img class="gallery_img" src="<%= img.medium%>" alt="" srcset="">
                     </div>
-               <% }) 
-            }%>
+               <% }) }%>
+            </div>
         </div>
     </div>
 </div>
