--- a/views/layouts/default.twig
+++ b/views/layouts/default.twig
@@ -8,9 +8,14 @@
         <title>
             {{title}}
         </title>
+        {% block metatags %}
+            <meta name="title" content="{{meta.title}}">
+            <meta name="description" content="{{meta.description}}">
+            <meta name="author" content="{{meta.author}}">
+        {% endblock %}
         {% include 'partials/vendor.twig' %}
         {% include 'partials/includes.twig' %}
-        
+
     </head>
 
     <body>
