--- a/views/page.twig
+++ b/views/page.twig
@@ -1,5 +1,11 @@
 {% extends 'layouts/default.twig' %}
 
+{% block metatags %}
+    <meta name="title" content="{{title}}">
+
+{% endblock %}
+
+
 {% block body %}
     <div class="container">
         <h1>
