implemented featured image

--- a/views/admin/index.twig
+++ b/views/admin/index.twig
@@ -11,6 +11,7 @@
         <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,jQuery,CSS,HTML,RWD,Dashboard">
         <title>{{ meta.title }}
             | Dashboard</title>
+        <script src="/admin_assets/vendors/jquery/js/jquery.min.js"></script>
         {% include 'admin/partials/includes.twig' %}
         {% block additional_css %}{% endblock %}
     </head>
