--- a/admin_assets/css/custom.css
+++ b/admin_assets/css/custom.css
@@ -14,3 +14,15 @@
     padding: 3px;
     overflow: hidden;
 }
+.each-gallery-selector {
+    padding: 3px;
+}
+.gallery-thumb {
+    width: 100%;
+    height: 120px;
+    object-fit: cover;
+}
+.img-selected {
+    outline: 5px solid #2196F3;
+    outline-offset: -5px;
+}
