--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,3 +3,10 @@
     background-position: center;
     color: white;
 }
+.featured-image {
+   width: 100%;
+   height: 370px;
+   object-fit: cover;
+   object-position: center;
+   margin-bottom:20px;
+}
