--- a/views/admin/partials/gallery_selector.twig
+++ b/views/admin/partials/gallery_selector.twig
@@ -1,11 +1,116 @@
 <script>
-    function GalleryApi () {
+    function GalleryApi() {
         this.base_url = '{{ admin_baseurl }}'
         this.get = () => {
-            return fetch(`${this.base_url}/gallery/json`)
-            .then(response => response.json())
+            return fetch(`${this.base_url}/gallery/json`).then(response => response.json())
         }
     }
     var gallery = new GalleryApi();
-    gallery.get().then(data => console.log(data));
+    let config;
+    let images = new Map();
+    function getPreviewHtml(src) {
+        const previewImgHtml = `
+            <img src="${src}" class="img-thumbnail">
+        `;
+        return previewImgHtml;
+    }
+    $(document).ready(function () {
+        $('#gallerySelector').on('shown.bs.modal', async function (ev) {
+            const btn = $(ev.relatedTarget);
+            var imgs = await gallery.get();
+            config = {
+                max: btn.data('max'),
+                input: btn.data('input'),
+                preview: btn.data('preview')
+            }
+
+            processImages(imgs)
+            updateImageCount()
+        })
+        $('#finalSelect').on('click', function () {
+            const finalised = []
+            $(config.preview).html('')
+            images.forEach((v, key) => {
+                finalised.push(key)
+
+                $(config.preview).append(getPreviewHtml(v));
+            })
+            if (config.max == 1) {
+                $(config.input).val(finalised[0]);
+            }
+            console.log(finalised);
+        })
+    })
+
+    function selectImage(element) {
+        const el = $(element);
+        var data = {
+            id: el.attr('data-id'),
+            src: element.src
+        }
+        if (config.max == 1) {
+            $('.img-selected').removeClass('img-selected');
+            images.clear();
+        }
+
+        images.set(data.id, data.src);
+        el.toggleClass('img-selected');
+        updateImageCount()
+    }
+
+    function updateImageCount() {
+        const count = $('.img-selected').length;
+        $('#selectedImgsCount').text(count)
+    }
+
+    function processImages(imgs) {
+        var col12 = $('<div class="row">');
+        var galleryContainer = $('.galler-imgs');
+        imgs.forEach((img) => {
+            var each = `
+                <div class="col-md-2 each-gallery-selector">
+                    <img src="${img.medium}" class="gallery-thumb" data-id="${img._id}" onclick="selectImage(this)">
+                </div>
+            `;
+            col12.append(each);
+            galleryContainer.html(col12)
+        })
+
+    }
 </script>
+
+<style>
+    .modal-lg {
+        max-width: 90%;
+    }
+</style>
+
+<div class="modal fade" id="gallerySelector">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title">Gallery</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+
+            <!-- Modal body -->
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-9 galler-imgs"></div>
+                    <div class="col-md-3"></div>
+                </div>
+            </div>
+
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                <span><span id="selectedImgsCount">0</span>
+                    Selected</span>
+                <button type="button" id="finalSelect" data-dismiss="modal" class="btn btn-primary">Select</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+
+        </div>
+    </div>
+</div>
