--- a/views/admin/post/index.twig
+++ b/views/admin/post/index.twig
@@ -13,9 +13,11 @@
     </script>
 {% endblock %}
 
-
 {% block body %}
-    {% include 'admin/partials/gallery_selector.twig' %}
+    {% include 'admin/partials/gallery_selector.twig' with {
+        modal_title : 'Awesome'
+    } %}
+
     <h2>Create
         {{ post_type.singular }}
     </h2>
@@ -51,6 +53,7 @@
                                 <span class="help-block text-danger">Please enter content</span>
                             {% endif %}
                         </div>
+                        <input type="hidden" name="featured_image" id="featuredImage" value="{{existing_data.featured_image._id}}">
                         {{_csrfInput}}
                         <input type="submit" value="SAVE" class="btn btn-primary">
                     </div>
@@ -105,6 +108,23 @@
                     </div>
                 </div>
             </div>
+            <div class="card">
+                <div class="card-header">
+                    Featured Image
+                </div>
+                <div class="card-body">
+                    <div id="previewImages">
+                        {% if existing_data.featured_image %}
+                            <img src="{{existing_data.featured_image.medium}}" class="img-thumbnail" alt="" srcset="">
+                        {% endif %}
+
+                    </div>
+                    <button type="button" class="btn btn-primary mt-2" data-toggle="modal" data-preview="#previewImages" data-max="1" data-input="#featuredImage" data-target="#gallerySelector">
+                        Select
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
+
 {% endblock %}
