--- a/views/layouts/default.twig
+++ b/views/layouts/default.twig
@@ -19,7 +19,10 @@
     </head>
 
     <body>
-        {% include 'partials/header.twig' %}
+        {% include 'partials/navbar.twig' %}
+        {% block header %}
+            {% include 'partials/header.twig' %}
+        {% endblock %}
         {% block body %}{% endblock %}
     </body>
 </html>
