--- a/views/page.twig
+++ b/views/page.twig
@@ -5,9 +5,11 @@
 
 {% endblock %}
 
-
 {% block body %}
     <div class="container">
+        {% if post.featured_image %}
+            <img class="featured-image" src="{{post.featured_image.large}}">
+        {% endif %}
         <h1>
             {{ post.title }}
         </h1>
