--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -1,22 +1,4 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <div class="container">
-        <a class="navbar-brand" href="#">
-            {{meta.title}}
-        </a>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/">About Us</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/">Contact Us</a>
-            </li>
-
-        </ul>
-    </div>
-</nav>
+{% block header %}
 <div class="jumbotron custom_header">
     <div class="container">
         <h1 class="display-3">
@@ -24,3 +6,4 @@
         </h1>
     </div>
 </div>
+{% endblock %}
