--- a/views/admin/post/index.twig
+++ b/views/admin/post/index.twig
@@ -8,6 +8,7 @@
     <script>
         window.onload = function () {
             var simplemde = new SimpleMDE({element: document.getElementById('content')});
+            window.simplemde = simplemde;
             console.log(simplemde)
         }
     </script>
@@ -47,7 +48,16 @@
 
                         </div>
                         <div class="form-group">
-                            <label for="content">Content :</label>
+                            <label for="content">Content :
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <button type="button" class="btn btn-primary" data-toggle="modal" data-action="post-images" data-max="0" data-target="#gallerySelector">
+                                            Add Images
+                                        </button>
+                                    </div>
+                                </div>
+                            </label>
+
                             <textarea type="text" class="form-control" name="content" id="content">{{existing_data.content}}</textarea>
                             {% if form_err.content %}
                                 <span class="help-block text-danger">Please enter content</span>
@@ -119,7 +129,7 @@
                         {% endif %}
 
                     </div>
-                    <button type="button" class="btn btn-primary mt-2" data-toggle="modal" data-preview="#previewImages" data-max="1" data-input="#featuredImage" data-target="#gallerySelector">
+                    <button type="button" class="btn btn-primary mt-2" data-toggle="modal" data-preview="#previewImages" data-action="featured-image" data-max="1" data-input="#featuredImage" data-target="#gallerySelector">
                         Select
                     </button>
                 </div>
