Menu with other features

--- a/views/admin/partials/sidebar_nav.twig
+++ b/views/admin/partials/sidebar_nav.twig
@@ -18,6 +18,26 @@
                 Gallery
             </a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ admin_baseurl }}/users">
+                <i class="nav-icon icon-user"></i>
+                Users
+            </a>
+        </li>
+        <li class="nav-item nav-dropdown">
+            <a class="nav-link nav-dropdown-toggle" href="{{ admin_baseurl }}/users">
+                <i class="nav-icon icon-speedometer"></i>
+                Customization
+            </a>
+            <ul class="nav-dropdown-items">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ admin_baseurl }}/customization/menu">
+                        <i class="nav-icon icon-menu"></i>
+                        Menu
+                    </a>
+                </li>
+            </ul>
+        </li>
 
     </ul>
 </nav>
