--- a/views/error.twig
+++ b/views/error.twig
@@ -1,3 +1,10 @@
-<h1>{{message }}</h1>
-<h2>{{ error.status }}</h2>
-<pre>{{ error.stack }}</pre>
+{% extends "layouts/default.twig" %}
+
+{% block body %}
+<div class="container">
+    <h1>{{message }}</h1>
+    <h2>{{ error.status }}</h2>
+    <pre>{{ error.stack }}</pre>
+
+</div>
+{% endblock %}
