--- a/admin_assets/css/custom.css
+++ b/admin_assets/css/custom.css
@@ -11,18 +11,35 @@
 }
 
 .each_gallery_img {
-    padding: 3px;
+    margin: 3px;
+    padding: 0;
     overflow: hidden;
+    flex: 0 0 24%;
 }
+
 .each-gallery-selector {
     padding: 3px;
 }
+
 .gallery-thumb {
     width: 100%;
     height: 120px;
     object-fit: cover;
 }
+
 .img-selected {
     outline: 5px solid #2196F3;
     outline-offset: -5px;
+}
+
+#menuAddedText {
+    display: none;
+}
+
+#show_menu_links>.list-group-item {
+    cursor: move;
+}
+
+#menuSavedAlert {
+    display: none;
 }
