--- a/views/partials/navbar.twig
+++ b/views/partials/navbar.twig
@@ -7,12 +7,11 @@
             <li class="nav-item">
                 <a class="nav-link" href="/">Home</a>
             </li>
+            {% for menu in nav_menu[0].links %}
             <li class="nav-item">
-                <a class="nav-link" href="/">About Us</a>
+                <a class="nav-link" href="{{menu.url}}">{{menu.title}}</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/">Contact Us</a>
-            </li>
+            {% endfor %}
 
         </ul>
     </div>
