form in development

--- a/views/admin/partials/sidebar_nav.twig
+++ b/views/admin/partials/sidebar_nav.twig
@@ -39,5 +39,12 @@
             </ul>
         </li>
 
+        <li class="nav-item">
+            <a class="nav-link" href="{{ admin_baseurl }}/forms">
+                <i class="nav-icon icon-doc"></i>
+                Forms
+            </a>
+        </li>
+
     </ul>
 </nav>
