--- a/views/admin/partials/sidebar_nav.twig
+++ b/views/admin/partials/sidebar_nav.twig
@@ -45,6 +45,12 @@
                 Forms
             </a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ admin_baseurl }}/newsletter">
+            <i class="nav-icon icon-envelope"></i>
+                Newsletter
+            </a>
+        </li>
 
     </ul>
 </nav>
