--- a/views/layouts/default.twig
+++ b/views/layouts/default.twig
@@ -6,7 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>
-            {{title}}
+            {% block title %}
+                {{title}}
+            {% endblock %}
         </title>
         {% block metatags %}
             <meta name="title" content="{{meta.title}}">
