--- a/views/index.twig
+++ b/views/index.twig
@@ -7,6 +7,6 @@
         <p>Welcome to
             {{title}}
         </p>
-        
+        {% include 'partials/newsletter_form.twig' %}
     </div>
 {% endblock %}
