--- a/views/admin/index.twig
+++ b/views/admin/index.twig
@@ -58,7 +58,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                        <img class="img-avatar" src="/admin_assets/img/avatars/6.jpg" alt="admin@bootstrapmaster.com">
+                        <img class="img-avatar" src="{{ gravatar_avatar }}" alt="{{session.email}}">
                     </a>
                     {% include 'admin/partials/user_dropdown.twig' %}
                 </li>
@@ -99,7 +99,9 @@
                     </li>
                 </ol>
                 <div class="container-fluid">
-                    {% block body %}{% endblock %}
+                    {% block body %}
+                        {% include "admin\dashboard\index.twig" %}
+                    {% endblock %}
                 </div>
             </main>
             <aside class="aside-menu">
