--- a/views/partials/newsletter_form.twig
+++ b/views/partials/newsletter_form.twig
@@ -1,14 +1,24 @@
-<div class="col-md-4">
-    <form action="/newsletter/subscribe" method="POST">
-        <div class="form-group">
-            <label for="name">Name :</label>
-            <input type="text" name="name" id="name" class="form-control">
-        </div>
-        <div class="form-group">
-            <label for="email">Email :</label>
-            <input type="email" name="email" id="email" class="form-control">
-        </div>
-        {{ _csrfInput }}
-        <input type="submit" value="Subscribe" class="btn btn-primary">
-    </form>
+
+<div class="card">
+    <div class="card-header">Subscribe To Newsletter</div>
+    <div class="card-body">
+        <form action="/newsletter/subscribe" method="POST">
+            {% if success_msg.length > 0 %}
+            <div class="alert alert-success">{{success_msg}}</div>
+            {% endif %}
+            {% if error_msg.length > 0 %}
+            <div class="alert alert-danger">{{error_msg}}</div>
+            {% endif %}
+            <div class="form-group">
+                <label for="name">Name :</label>
+                <input type="text" name="name" id="name" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="email">Email :</label>
+                <input type="email" name="email" id="email" class="form-control">
+            </div>
+            {{ _csrfInput }}
+            <input type="submit" value="Subscribe" class="btn btn-primary">
+        </form>
+    </div>
 </div>
